--- a/views/background.html
+++ b/views/background.html
@@ -1,2 +1,3 @@
-<script src="../lib/jquery-1.5.2.min.js"></script>
+<script src="../lib/jquery-1.6.1.min.js"></script>
+<script src="options.js" type="text/javascript"></script>
 <script src="background.js"></script>
