--- a/tcstatus/views/background.html
+++ b/tcstatus/views/background.html
@@ -1,3 +1,4 @@
 <script src="../lib/jquery-1.6.1.min.js"></script>
+<script src="analytics.js" type="text/javascript"></script>
 <script src="options.js" type="text/javascript"></script>
-<script src="background.js"></script>
+<script src="background.js" type="text/javascript"></script>
