--- a/tcstatus/views/options.html
+++ b/tcstatus/views/options.html
@@ -48,6 +48,7 @@
 
 
 <script src="../lib/jquery-1.6.1.min.js" type="text/javascript"></script>
+<script src="analytics.js" type="text/javascript"></script>
 <script src="options.js" type="text/javascript"></script>
 <script type="text/javascript">
 	var options = new Options(localStorage);
