--- a/tcstatus/views/status.html
+++ b/tcstatus/views/status.html
@@ -1,5 +1,6 @@
 <script src="../lib/jquery-1.6.1.min.js" type="text/javascript"></script>
 <script src="../lib/jquery.tmpl.min.js" type="text/javascript"></script>
+<script src="analytics.js" type="text/javascript"></script>
 <link href="styles.css" rel="Stylesheet" type="text/css"/>
 
 <script id="template" type="text/x-jquery-tmpl">
