removed status symbols

--- a/tcstatus/views/status.html
+++ b/tcstatus/views/status.html
@@ -8,7 +8,7 @@
 		{{each(i, build) builds}}
 		<li class="${build.status}">
 		<a href="${build.webUrl}" title="${build.status}">
-			<span class="icon">${symbolFor(build.status)}</span>
+			<span class="icon">&nbsp;</span>
 				${build.projectName} - ${build.name}
 			</a>
 		</li>
@@ -19,14 +19,6 @@
 <div id="status"></div>
 
 <script type="text/javascript">
-	function symbolFor(status){
-		switch(status){
-			case 'success': return '&radic;';
-			case 'failure': return '!';
-			case 'unknown': return '?';
-		}
-	};
-
 	$('#status').empty();
 	$('#template')
 		.tmpl({builds:chrome.extension.getBackgroundPage().builds})
