--- a/tcstatus/views/background.html
+++ b/tcstatus/views/background.html
@@ -2,4 +2,5 @@
 <script src="analytics.js" type="text/javascript"></script>
 <script src="options.js" type="text/javascript"></script>
 <script src="tcclient.js" type="text/javascript"></script>
+<script src="fsm.js" type="text/javascript"></script>
 <script src="background.js" type="text/javascript"></script>
