--- a/tcstatus/views/styles.css
+++ b/tcstatus/views/styles.css
@@ -1,10 +1,12 @@
 @import url('reset.css');
 
 /* typography */
-body, input, select, textarea, button { font-family: 'Trebuchet MS'; font-size: .9em; }
+body, input, select, textarea, button, p { font-family: 'Trebuchet MS'; font-size: .9em; }
 h1 { font-size: 1.5em; font-weight: bold; }
 .message { font-size: 1.2em; }
 #status li a { text-decoration: none; }
+
+.notification h1 { font-size: 1em; }
 
 
 /* layout */
@@ -25,6 +27,9 @@ input, label { display: inline-block; }
 #options button {	clear: both; float: left; width: 10em; margin: 0 .5em; padding: .3em; }
 #options .message {	display: none; float:left; margin: 0 .5em; padding: .7em 2em; }
 
+.notification img { float: left; margin: 0 .35em 0 0; }
+.notification nav { border-top: 1px solid; margin-top: .9em; padding-top: .5em; }
+.notification.communication.error nav #abort { float:right; }
 
 /* colors */
 #status li a { color: #000; }
