--- a/tcstatus/views/options.html
+++ b/tcstatus/views/options.html
@@ -1,4 +1,4 @@
-<link href="styles.css" rel="Stylesheet" type="text/css"/>
+<link href="../styles/main.css" rel="stylesheet"/>
 
 <h1>Team City Status Notifier</h1>
 <form id="options">
@@ -46,11 +46,10 @@
 		<div id="saved" class="message">Options saved</div>
 </form>
 
-
-<script src="../lib/jquery-1.6.1.min.js" type="text/javascript"></script>
-<script src="analytics.js" type="text/javascript"></script>
-<script src="options.js" type="text/javascript"></script>
-<script type="text/javascript">
+<script src="../lib/jquery-1.6.1.min.js"></script>
+<script src="../src/analytics.js"></script>
+<script src="../src/options.js"></script>
+<script>
 	var options = new Options(localStorage);
 	options.load();
 
