--- a/tcstatus/views/notifications/communication.error.html
+++ b/tcstatus/views/notifications/communication.error.html
@@ -1,6 +1,6 @@
-<link href="styles.css" rel="Stylesheet" type="text/css"/>
+<link href="../../styles/main.css" rel="stylesheet"/>
 <div class="notification communication error">
-	<img src="../images/icon32.png" alt="logo"/>
+	<img src="../../images/icon32.png" alt="logo"/>
 	<h1>Communication Error</h1>
 	<p>Couldn't retrieve build statuses. Please try again or check configuration options.</p>
 	<nav>
@@ -9,7 +9,7 @@
 		<button id="abort">Abort</button>
 	</nav>
 </div>
-<script src="../lib/jquery-1.6.1.min.js"></script>
+<script src="../../lib/jquery-1.6.1.min.js"></script>
 <script>
 	$('#retry').click(function(){
 		chrome.extension.getBackgroundPage().reset();
