--- a/tcstatus/views/status.html
+++ b/tcstatus/views/status.html
@@ -1,7 +1,4 @@
-<script src="../lib/jquery-1.6.1.min.js" type="text/javascript"></script>
-<script src="../lib/jquery.tmpl.min.js" type="text/javascript"></script>
-<script src="analytics.js" type="text/javascript"></script>
-<link href="styles.css" rel="Stylesheet" type="text/css"/>
+<link href="../styles/main.css" rel="stylesheet"/>
 
 <script id="template" type="text/x-jquery-tmpl">
 	<ul>
@@ -21,7 +18,10 @@
 
 <div id="status"></div>
 
-<script type="text/javascript">
+<script src="../lib/jquery-1.6.1.min.js"></script>
+<script src="../lib/jquery.tmpl.min.js"></script>
+<script src="../src/analytics.js"></script>
+<script>
 	$('#status').empty();
 	$('#template')
 		.tmpl({builds:chrome.extension.getBackgroundPage().builds})
