--- a/tcstatus/views/status.html
+++ b/tcstatus/views/status.html
@@ -1,32 +1,37 @@
 <link href="../styles/main.css" rel="stylesheet"/>
 
 <script id="template" type="text/x-jquery-tmpl">
-	<ul>
-		{{each(i, build) builds}}
-		<li class="${build.status}">
-		<a href="${build.webUrl}" title="${build.status}">
-			<span class="icon">&nbsp;</span>
-			<span class="project">${build.projectName}</span>
-			<span class="configuration">${build.name}</span>
-			<span class="buildnumber">${build.lastBuildNumber}</span>
-			<span class="description">${build.description}</span>
-			</a>
-		</li>
-		{{/each}}
-	</ul>
+	{{each(i, build) builds}}
+	<li class="${build.status}">
+	<a href="${build.webUrl}" title="${build.status}">
+		<span class="icon"><span class="buildnumber">${build.lastBuildNumber || '&nbsp;'}</span></span>
+		<span class="project">${build.projectName}</span>
+		<span class="configuration">${build.name}</span>
+		
+		<span class="description">${build.description}</span>
+		</a>
+	</li>
+	{{/each}}
 </script>
 
-<div id="status"></div>
+<div id="status">
+<!--
+	<nav>
+		<a href="#" id="refresh">Refresh</a>
+	</nav>
+	-->
+	<ul></ul>
+</status>
 
 <script src="../lib/jquery-1.6.1.min.js"></script>
 <script src="../lib/jquery.tmpl.min.js"></script>
 <script src="../src/analytics.js"></script>
 <script>
-	$('#status').empty();
+	$('#status ul').empty();
 	$('#template')
 		.tmpl({builds:chrome.extension.getBackgroundPage().builds})
-		.appendTo('#status');
-	$('#status li a').click(function(event){
+		.appendTo('#status ul');
+	$('#status ul li a').click(function(event){
 		event.preventDefault();
 		chrome.tabs.create({url:$(this).attr('href')});
 	});
