--- a/tcstatus/views/status.html
+++ b/tcstatus/views/status.html
@@ -15,11 +15,9 @@
 </script>
 
 <div id="status">
-<!--
 	<nav>
 		<a href="#" id="refresh">Refresh</a>
 	</nav>
-	-->
 	<ul></ul>
 </status>
 
@@ -27,12 +25,37 @@
 <script src="../lib/jquery.tmpl.min.js"></script>
 <script src="../src/analytics.js"></script>
 <script>
-	$('#status ul').empty();
-	$('#template')
-		.tmpl({builds:chrome.extension.getBackgroundPage().builds})
-		.appendTo('#status ul');
-	$('#status ul li a').click(function(event){
-		event.preventDefault();
-		chrome.tabs.create({url:$(this).attr('href')});
+	function setStatuses(builds){
+		if(builds.length === 0){
+			statuses = $('<li>No statuses retrieved yet</li>');
+		} else {
+			statuses = $('#template').tmpl({builds:builds});
+		}
+		$('#status ul')
+			.empty()
+			.append(statuses);
+		$('#status ul li a').click(function(event){
+			event.preventDefault();
+			chrome.tabs.create({url:$(this).attr('href')});
+		});
+	}
+	chrome.extension.onRequest.addListener(function(request, sender, sendResponse){
+		switch(request.action){
+			case 'refreshed':
+				setStatuses(chrome.extension.getBackgroundPage().builds);
+				break;
+		}
 	});
+
+	function refresh(){
+		chrome.extension.sendRequest({action:'refresh'});
+	}
+
+	$('#refresh').click(function(event){
+		event.preventDefault();
+		setStatuses([]);
+		refresh();
+	});
+
+	setStatuses(chrome.extension.getBackgroundPage().builds);
 </script>
